--- a/index.html
+++ b/index.html
@@ -1,150 +1,228 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>STEP — Guardian Tracker</title>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <title>STEP Tracker — Guardian Dashboard</title>
 
   <!-- Leaflet CSS -->
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css"/>
 
-  <!-- Simple STEP theme CSS (high-contrast + accessible) -->
+  <!-- Google Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet"/>
+
   <style>
-    :root{
-      --bg:#000;
-      --accent:#FFD400; /* STEP yellow */
-      --muted:#ddd;
-      --card:#111;
-      --success:#4CAF50;
-      --danger:#FF5252;
-      --font-sans: "Segoe UI", Roboto, Arial, sans-serif;
+    :root {
+      --bg: #0d0d0d;
+      --card: #141414;
+      --accent: #FFD400;
+      --text: #eaeaea;
+      --muted: #aaa;
+      --danger: #ff4d4d;
+      --success: #4CAF50;
     }
-    html,body{height:100%; margin:0; background:var(--bg); color:var(--muted); font-family:var(--font-sans);}
-    .container{display:flex; height:100vh; gap:12px; padding:12px; box-sizing:border-box;}
-    /* Left: map, Right: info panel */
-    .map-wrap{flex:2; border-radius:12px; overflow:hidden; box-shadow:0 4px 14px rgba(0,0,0,0.6);}
-    #map{height:100%; width:100%;}
-    .panel{flex:1; background:var(--card); border-radius:12px; padding:18px; display:flex; flex-direction:column; gap:12px;}
-    h1{margin:0; color:var(--accent); font-size:28px;}
-    .big {font-size:28px; color:#fff; font-weight:700;}
-    .coordinate {font-size:20px; color:var(--muted); background:#0b0b0b; padding:10px; border-radius:8px;}
-    .row{display:flex; gap:10px; align-items:center;}
-    .label{color:#bbb; font-size:14px;}
-    .status {padding:12px; border-radius:10px; background:#070707; display:flex; justify-content:space-between; align-items:center;}
-    .pill{font-size:18px; padding:10px 12px; border-radius:10px; background:#111; color:var(--muted);}
-    button.large {
-      background:var(--accent); color:#000; border:none; padding:12px; font-size:18px; border-radius:10px;
-      cursor:pointer; font-weight:700;
+
+    * { box-sizing: border-box; margin: 0; padding: 0; font-family: 'Poppins', sans-serif; }
+
+    body {
+      background: var(--bg);
+      color: var(--text);
+      display: flex;
+      flex-direction: column;
+      height: 100vh;
+      overflow: hidden;
     }
-    .meta{font-size:14px; color:#999;}
-    .alert{background:var(--danger); color:#000; padding:10px; border-radius:8px; font-weight:700;}
-    .ok{background:var(--success); color:#000; padding:10px; border-radius:8px; font-weight:700;}
-    footer{margin-top:auto; font-size:13px; color:#777;}
-    @media(max-width:900px){
-      .container{flex-direction:column;}
-      .map-wrap{height:60vh;}
-      .panel{height:40vh; overflow:auto;}
+
+    header {
+      background: linear-gradient(90deg, #000, #111, #222);
+      padding: 18px 30px;
+      border-bottom: 2px solid var(--accent);
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      color: var(--accent);
+      font-weight: 700;
+      letter-spacing: 0.5px;
+      box-shadow: 0 0 12px rgba(255, 212, 0, 0.3);
+    }
+
+    main {
+      display: grid;
+      grid-template-columns: 2fr 1fr;
+      height: 100%;
+      overflow: hidden;
+    }
+
+    #map {
+      width: 100%;
+      height: 100%;
+      z-index: 1;
+    }
+
+    .panel {
+      background: var(--card);
+      padding: 25px;
+      display: flex;
+      flex-direction: column;
+      gap: 18px;
+      border-left: 2px solid #222;
+      box-shadow: inset 0 0 12px rgba(255, 212, 0, 0.05);
+    }
+
+    .title {
+      font-size: 22px;
+      color: var(--accent);
+      font-weight: 700;
+      text-align: center;
+    }
+
+    .info-box {
+      background: #111;
+      border: 1px solid #222;
+      border-radius: 10px;
+      padding: 12px 15px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      font-size: 16px;
+    }
+
+    .info-box span.value {
+      color: var(--accent);
+      font-weight: 600;
+    }
+
+    .status-pill {
+      background: var(--success);
+      color: #000;
+      font-weight: 700;
+      padding: 10px 14px;
+      border-radius: 8px;
+      text-align: center;
+      font-size: 15px;
+    }
+
+    .alert {
+      background: var(--danger);
+      color: #000;
+      font-weight: 700;
+      padding: 10px;
+      border-radius: 8px;
+      text-align: center;
+      font-size: 15px;
+      animation: blink 1.2s infinite alternate;
+    }
+
+    @keyframes blink {
+      0% { opacity: 1; }
+      100% { opacity: 0.6; }
+    }
+
+    .btn-row {
+      display: flex;
+      gap: 10px;
+      justify-content: space-between;
+      margin-top: auto;
+    }
+
+    button {
+      flex: 1;
+      border: none;
+      background: var(--accent);
+      color: #000;
+      font-weight: 700;
+      border-radius: 10px;
+      padding: 12px;
+      cursor: pointer;
+      font-size: 16px;
+      transition: all 0.2s ease;
+    }
+
+    button:hover {
+      background: #ffe44d;
+      transform: scale(1.03);
+    }
+
+    footer {
+      text-align: center;
+      padding: 8px;
+      font-size: 13px;
+      color: var(--muted);
+      border-top: 1px solid #222;
+    }
+
+    @media(max-width: 900px) {
+      main { grid-template-columns: 1fr; grid-template-rows: 1fr 0.9fr; }
+      .panel { border-left: none; border-top: 2px solid #222; }
     }
   </style>
 </head>
 <body>
-  <div class="container" role="main">
-    <div class="map-wrap" aria-label="Map area">
-      <div id="map" role="application" aria-label="Live location map"></div>
+  <header>
+    <div>👟 STEP Tracker — Guardian</div>
+    <div id="connectStatus" class="status-pill">Connecting...</div>
+  </header>
+
+  <main>
+    <div id="map"></div>
+
+    <div class="panel">
+      <div class="title">Device Information</div>
+
+      <div class="info-box"><span>Last Location:</span><span class="value" id="latlng">— , —</span></div>
+      <div class="info-box"><span>Last Update:</span><span class="value" id="lastUpdate">—</span></div>
+      <div class="info-box"><span>Distance to Obstacle:</span><span class="value" id="distance">— cm</span></div>
+      <div class="info-box"><span>Battery Level:</span><span class="value" id="battery">— V</span></div>
+      <div id="alerts" class="ok status-pill">No alerts</div>
+
+      <div class="btn-row">
+        <button id="playSound">🔔 Play Sound</button>
+        <button id="centerBtn">📍 Center Map</button>
+      </div>
     </div>
+  </main>
 
-    <aside class="panel" aria-label="Device information panel">
-      <header>
-        <h1>STEP Tracker — Guardian</h1>
-        <div class="meta">Device: <span id="deviceName">S.T.E.P Prototype</span></div>
-      </header>
+  <footer>© 2025 STEP Smart Blind Shoe | Designed for accessibility and real-time tracking</footer>
 
-      <section class="status" aria-live="polite">
-        <div>
-          <div class="label">Last location</div>
-          <div id="latlng" class="big coordinate" aria-atomic="true">— , —</div>
-        </div>
-        <div style="text-align:right">
-          <div class="label">Last update</div>
-          <div id="lastUpdate" class="pill">—</div>
-          <div style="height:8px"></div>
-          <div id="connectStatus" class="pill">Connecting...</div>
-        </div>
-      </section>
-
-      <section>
-        <div class="label">Distance to obstacle</div>
-        <div id="distance" class="coordinate">— cm</div>
-      </section>
-
-      <section>
-        <div class="label">Battery</div>
-        <div id="battery" class="coordinate">— V</div>
-      </section>
-
-      <section>
-        <div class="label">Alerts</div>
-        <div id="alerts" class="coordinate" role="status" aria-live="assertive">No alerts</div>
-      </section>
-
-      <section class="row" style="justify-content:space-between">
-        <button id="playSound" class="large" aria-label="Play alert sound">🔔 Play Sound</button>
-        <button id="centerBtn" class="large" aria-label="Center map on device">📍 Center Map</button>
-      </section>
-
-      <footer>
-        <div class="meta">Share this page with the guardian. Designed for accessibility (high contrast, large text).</div>
-      </footer>
-    </aside>
-  </div>
-
-  <!-- Scripts: Firebase (compat), Leaflet, and main JS -->
+  <!-- Scripts -->
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database-compat.js"></script>
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
 
   <script>
-  /*******************************
-   *  1) Paste your firebaseConfig here
-   *******************************/
-   const firebaseConfig = {
+  // --- Firebase Configuration ---
+  const firebaseConfig = {
     apiKey: "AIzaSyCEPsPPxprCkb70JAre73vo0jo3YA6uZQ4",
     authDomain: "step-gps-tracker.firebaseapp.com",
     databaseURL: "https://step-gps-tracker-default-rtdb.asia-southeast1.firebasedatabase.app",
     projectId: "step-gps-tracker",
     storageBucket: "step-gps-tracker.firebasestorage.app",
     messagingSenderId: "637274580153",
-    appId: "1:637274580153:web:7566f774dbf5ea4380a768",
-    measurementId: "G-YNCGWZ0W3G"
+    appId: "1:637274580153:web:7566f774dbf5ea4380a768"
   };
 
-  // Initialize Firebase
   firebase.initializeApp(firebaseConfig);
   const db = firebase.database();
 
-  /*******************************
-   * 2) Leaflet map setup
-   *******************************/
+  // --- Leaflet Map ---
   const defaultLat = 13.0, defaultLng = 121.0;
-  const map = L.map('map', { zoomControl: true }).setView([defaultLat, defaultLng], 15);
+  const map = L.map('map').setView([defaultLat, defaultLng], 16);
+
   L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
     maxZoom: 19,
     attribution: '© OpenStreetMap contributors'
   }).addTo(map);
 
-  // big accessible icon (yellow circle)
   const icon = L.divIcon({
-    className: 'step-marker',
-    html: '<div style="width:26px;height:26px;border-radius:50%;background:#FFD400;border:3px solid #000"></div>',
-    iconSize: [26,26], iconAnchor: [13,13]
+    className: '',
+    html: '<div style="width:26px;height:26px;border-radius:50%;background:#FFD400;border:3px solid #000;box-shadow:0 0 10px #FFD400;"></div>',
+    iconSize: [26,26],
+    iconAnchor: [13,13]
   });
 
-  let marker = L.marker([defaultLat, defaultLng], { icon }).addTo(map);
-  marker.bindPopup('STEP device').openPopup();
+  let marker = L.marker([defaultLat, defaultLng], {icon}).addTo(map).bindPopup('STEP Device');
 
-  /*******************************
-   * 3) UI elements
-   *******************************/
+  // --- Elements ---
   const latlngEl = document.getElementById('latlng');
   const lastUpdateEl = document.getElementById('lastUpdate');
   const distanceEl = document.getElementById('distance');
@@ -154,96 +232,38 @@
   const centerBtn = document.getElementById('centerBtn');
   const playSoundBtn = document.getElementById('playSound');
 
-  // audio for alerts (simple beep)
-  const beep = new Audio('data:audio/wav;base64,UklGRiQAAABXQVZFZm10IBAAAAABAAEA...'); // (placeholder short beep)
-  // Note: you can replace with a real URL or encoded audio.
+  // --- Sound Alert ---
+  const beep = new Audio("https://actions.google.com/sounds/v1/alarms/beep_short.ogg");
 
-  // center map on marker
-  centerBtn.addEventListener('click', ()=> {
-    map.panTo(marker.getLatLng());
-    marker.openPopup();
-  });
+  centerBtn.addEventListener('click', ()=> map.panTo(marker.getLatLng()));
+  playSoundBtn.addEventListener('click', ()=> beep.play());
 
-  playSoundBtn.addEventListener('click', ()=> {
-    try { beep.play(); }catch(e){ console.log(e); }
-  });
-
-  /*******************************
-   * 4) Helper: format timestamp
-   *******************************/
-  function formatTS(ts){
-    if(!ts) return '—';
-    const d = new Date(ts*1000);
-    return d.toLocaleString('en-PH', { hour12:false });
-  }
-
-  /*******************************
-   * 5) Listen to Firebase 'shoe' node
-   *******************************/
+  // --- Firebase listener ---
   const shoeRef = db.ref('shoe');
-  let lastSeen = 0;
-
   shoeRef.on('value', snap => {
     const data = snap.val();
-    if(!data){ connectStatusEl.textContent = 'No data'; connectStatusEl.style.background=''; return; }
+    if(!data){ connectStatusEl.textContent='No Data'; connectStatusEl.style.background= '#555'; return; }
 
-    // mark connected
-    connectStatusEl.textContent = 'Online';
-    connectStatusEl.style.background = 'var(--accent)';
-    connectStatusEl.style.color='#000';
+    connectStatusEl.textContent='Online';
+    connectStatusEl.style.background= 'var(--success)';
 
-    // coordinates
     const lat = data.latitude || defaultLat;
     const lng = data.longitude || defaultLng;
     marker.setLatLng([lat,lng]);
-
     latlngEl.textContent = `${lat.toFixed(6)} , ${lng.toFixed(6)}`;
+    lastUpdateEl.textContent = new Date().toLocaleString('en-PH',{hour12:false});
+    distanceEl.textContent = data.distance ? `${data.distance.toFixed(1)} cm` : '— cm';
+    batteryEl.textContent = data.battery ? `${data.battery.toFixed(2)} V` : '— V';
 
-    // timestamp - if none, use client time
-    const ts = data.timestamp || Math.floor(Date.now()/1000);
-    lastUpdateEl.textContent = formatTS(ts);
-
-    // distance
-    if (typeof data.distance !== 'undefined' && data.distance !== null){
-      distanceEl.textContent = `${Number(data.distance).toFixed(1)} cm`;
-    } else { distanceEl.textContent = '— cm'; }
-
-    // battery
-    if (typeof data.battery !== 'undefined' && data.battery !== null){
-      batteryEl.textContent = `${Number(data.battery).toFixed(2)} V`;
-    } else { batteryEl.textContent = '— V'; }
-
-    // Alerts / SOS
-    if (data.sos === true){
-      alertsEl.innerHTML = '<span class="alert">SOS — Send Help</span>';
-      try{ beep.play(); }catch(e){}
+    if (data.sos) {
+      alertsEl.textContent = "⚠️ SOS — Send Help!";
+      alertsEl.className = "alert";
+      beep.play();
     } else {
-      alertsEl.innerHTML = '<span class="ok">No alerts</span>';
-    }
-
-    // center map on first update
-    if(!lastSeen){ map.panTo([lat,lng]); marker.openPopup(); }
-    lastSeen = ts;
-  }, err => {
-    console.error('Firebase read failed', err);
-    connectStatusEl.textContent = 'Error';
-    connectStatusEl.style.background = 'var(--danger)';
-  });
-
-  /*******************************
-   * 6) Optional: monitor connection state (offline detection)
-   *******************************/
-  const connectedRef = db.ref(".info/connected");
-  connectedRef.on("value", snap => {
-    if (snap.val() === true) {
-      // connected to Firebase
-      // keep status as above
-    } else {
-      connectStatusEl.textContent = 'Offline';
-      connectStatusEl.style.background = 'var(--danger)';
+      alertsEl.textContent = "✅ No Alerts";
+      alertsEl.className = "status-pill";
     }
   });
-
   </script>
 </body>
 </html>
