--- a/index.html
+++ b/index.html
@@ -4,105 +4,143 @@
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width,initial-scale=1"/>
 <title>STEP Tracker — Guardian Dashboard</title>
+
+<!-- Leaflet CSS -->
 <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css"/>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet"/>
+
 <style>
-body{margin:0;font-family:sans-serif;background:#111;color:#fff;}
-#map{width:70%;height:100vh;float:left;}
-.panel{width:30%;height:100vh;float:left;background:#222;padding:20px;overflow:auto;}
-.info{margin-bottom:10px;padding:10px;background:#333;border-radius:8px;}
-.status{padding:8px;border-radius:6px;text-align:center;}
-.status-ok{background:#4CAF50;color:#000;}
-.status-alert{background:#ff4d4d;color:#000;}
+:root {
+  --bg: #0d0d0d;
+  --card: #141414;
+  --accent: #FFD400;
+  --text: #eaeaea;
+  --muted: #aaa;
+  --danger: #ff4d4d;
+  --success: #4CAF50;
+}
+* { box-sizing: border-box; margin:0; padding:0; font-family:'Poppins', sans-serif; }
+body { background: var(--bg); color: var(--text); display:flex; flex-direction:column; height:100vh; overflow:hidden; }
+header { background: linear-gradient(90deg,#000,#111,#222); padding:18px 30px; border-bottom:2px solid var(--accent); display:flex; justify-content:space-between; font-weight:700; color:var(--accent); box-shadow:0 0 12px rgba(255,212,0,0.3); }
+main { display:grid; grid-template-columns:2fr 1fr; height:100%; overflow:hidden; }
+#map { width:100%; height:100%; z-index:1; }
+.panel { background:var(--card); padding:25px; display:flex; flex-direction:column; gap:18px; border-left:2px solid #222; box-shadow:inset 0 0 12px rgba(255,212,0,0.05); overflow-y:auto; }
+.title { font-size:22px; color:var(--accent); font-weight:700; text-align:center; }
+.info-box { background:#111; border:1px solid #222; border-radius:10px; padding:12px 15px; display:flex; justify-content:space-between; align-items:center; font-size:16px; }
+.info-box span.value { color: var(--accent); font-weight:600; }
+.status-pill { background:var(--success); color:#000; font-weight:700; padding:10px 14px; border-radius:8px; text-align:center; font-size:15px; }
+.alert { background:var(--danger); color:#000; font-weight:700; padding:10px; border-radius:8px; text-align:center; font-size:15px; animation:blink 1.2s infinite alternate; }
+@keyframes blink { 0%{opacity:1;} 100%{opacity:0.6;} }
+.btn-row { display:flex; gap:10px; justify-content:space-between; margin-top:auto; }
+button { flex:1; border:none; background:var(--accent); color:#000; font-weight:700; border-radius:10px; padding:12px; cursor:pointer; font-size:16px; transition: all 0.2s ease; }
+button:hover { background:#ffe44d; transform:scale(1.03); }
+button:focus { outline:2px solid var(--accent); outline-offset:2px; }
+footer { text-align:center; padding:8px; font-size:13px; color:var(--muted); border-top:1px solid #222; }
+@media(max-width:900px){ main {grid-template-columns:1fr; grid-template-rows:1fr 0.9fr;} .panel{border-left:none;border-top:2px solid #222;} }
+.leaflet-marker-icon { transition: transform 0.5s ease; }
 </style>
 </head>
 <body>
 
-<div id="map"></div>
-<div class="panel">
-  <div class="info"><b>Last Location:</b> <span id="latlng">—</span></div>
-  <div class="info"><b>Street:</b> <span id="street">—</span></div>
-  <div class="info"><b>Last Update:</b> <span id="lastUpdate">—</span></div>
-  <div class="info"><b>Distance to Obstacle:</b> <span id="distance">— cm</span></div>
-  <div class="info"><b>Battery:</b> <span id="battery">—%</span></div>
-  <div id="alerts" class="status status-ok">No Alerts</div>
-</div>
+<header>
+  <div>👟 STEP Tracker — Guardian</div>
+  <div id="connectStatus" class="status-pill" aria-live="polite">Connecting...</div>
+</header>
+
+<main>
+  <div id="map" role="application" aria-label="Interactive map showing STEP device location"></div>
+
+  <div class="panel">
+    <div class="title">Device Information</div>
+    <div class="info-box"><span>Last Location:</span><span class="value" id="latlng">— , —</span></div>
+    <div class="info-box"><span>Street:</span><span class="value" id="street">—</span></div>
+    <div class="info-box"><span>Last Update:</span><span class="value" id="lastUpdate">—</span></div>
+    <div class="info-box"><span>Distance to Obstacle:</span><span class="value" id="distance">— cm</span></div>
+    <div class="info-box"><span>Battery Level:</span><span class="value" id="battery">— %</span></div>
+    <div id="alerts" class="status-pill">No alerts</div>
+
+    <div class="btn-row">
+      <button id="playSound">🔔 Play Sound</button>
+      <button id="centerBtn">📍 Center Map</button>
+    </div>
+  </div>
+</main>
+
+<footer>© 2025 STEP Smart Blind Shoe | Real-time Tracking</footer>
 
 <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database-compat.js"></script>
 <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
 
 <script>
-// Firebase Config
+// Firebase config
 const firebaseConfig = {
-  apiKey: "AIzaSyCEPsPPxprCkb70JAre73vo0jo3YA6uZQ4",
+  apiKey: "YOUR_API_KEY",
   authDomain: "step-gps-tracker.firebaseapp.com",
   databaseURL: "https://step-gps-tracker-default-rtdb.asia-southeast1.firebasedatabase.app",
   projectId: "step-gps-tracker",
-  storageBucket: "step-gps-tracker.firebasestorage.app",
-  messagingSenderId: "637274580153",
-  appId: "1:637274580153:web:7566f774dbf5ea4380a768"
+  storageBucket: "step-gps-tracker.appspot.com",
+  messagingSenderId: "YOUR_SENDER_ID",
+  appId: "YOUR_APP_ID"
 };
 firebase.initializeApp(firebaseConfig);
 const db = firebase.database();
 
-// Leaflet Map
+// Map setup
 const defaultLat=14.3, defaultLng=121.4;
-const map=L.map('map').setView([defaultLat,defaultLng],16);
+const map = L.map('map').setView([defaultLat,defaultLng],16);
 L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',{maxZoom:19}).addTo(map);
 
-const marker=L.marker([defaultLat,defaultLng]).addTo(map);
-let pathCoords=[]; 
-let pathLine=L.polyline(pathCoords,{color:'#FFD400',weight:4}).addTo(map);
+// Marker for STEP device
+const blindIcon = L.divIcon({className:'custom-icon', html:'<div style="width:40px;height:40px;border-radius:50%;background:#FFD400;border:3px solid #000;display:flex;align-items:center;justify-content:center;"><span style="font-size:24px;">🧑‍🦯</span></div>', iconSize:[40,40], iconAnchor:[20,20]});
+let marker = L.marker([defaultLat,defaultLng],{icon:blindIcon}).addTo(map).bindPopup("STEP Device");
+let pathCoords = [];
+let pathLine = L.polyline(pathCoords,{color:'#FFD400',weight:4,opacity:0.8,dashArray:'10,10'}).addTo(map);
 
-// DOM Elements
+// Elements
 const latlngEl=document.getElementById('latlng');
 const streetEl=document.getElementById('street');
 const lastUpdateEl=document.getElementById('lastUpdate');
 const distanceEl=document.getElementById('distance');
 const batteryEl=document.getElementById('battery');
 const alertsEl=document.getElementById('alerts');
+const connectStatusEl=document.getElementById('connectStatus');
+const centerBtn=document.getElementById('centerBtn');
+const playSoundBtn=document.getElementById('playSound');
 
+const beep = new Audio("https://actions.google.com/sounds/v1/alarms/beep_short.ogg");
+centerBtn.addEventListener('click',()=>{map.panTo(marker.getLatLng()); map.setZoom(18);});
+playSoundBtn.addEventListener('click',()=> beep.play());
+
+// Reverse geocoding
 async function getStreet(lat,lng){
-  try{
-    const res=await fetch(`https://nominatim.openstreetmap.org/reverse?lat=${lat}&lon=${lng}&format=json`);
+  try {
+    const res=await fetch(`https://nominatim.openstreetmap.org/reverse?lat=${lat}&lon=${lng}&format=json&zoom=18&addressdetails=1`,{headers:{'User-Agent':'STEP Tracker'}});
     const data=await res.json();
-    return data.address ? (data.address.road || data.display_name) : 'Unknown';
-  }catch(e){ return 'Unknown';}
+    return data.address? (data.address.road||data.display_name||'Unknown'):'Unknown';
+  } catch(e){ return 'Unknown'; }
 }
 
-// Firebase Listener
-db.ref('shoe').on('value', async snap=>{
+// Firebase listener
+db.ref('shoe').on('value',async snap=>{
   const data = snap.val();
-  if(!data) return;
-  const lat = data.latitude || defaultLat;
-  const lng = data.longitude || defaultLng;
+  if(!data){ connectStatusEl.textContent='No Data'; connectStatusEl.style.background='#555'; return; }
+  connectStatusEl.textContent='Online'; connectStatusEl.style.background='var(--success)';
 
+  const lat=data.latitude||defaultLat;
+  const lng=data.longitude||defaultLng;
+
+  // Marker movement
   marker.setLatLng([lat,lng]);
-  map.panTo([lat,lng],{animate:true,duration:0.3});
-
-  pathCoords.push([lat,lng]);
-  if(pathCoords.length>200) pathCoords.shift();
+  map.panTo([lat,lng]);
+  pathCoords.push([lat,lng]); if(pathCoords.length>200) pathCoords.shift();
   pathLine.setLatLngs(pathCoords);
 
+  // Info panel
   latlngEl.textContent=`${lat.toFixed(6)}, ${lng.toFixed(6)}`;
-  lastUpdateEl.textContent=new Date().toLocaleTimeString();
-  distanceEl.textContent=data.distance ? `${data.distance.toFixed(1)} cm` : '— cm';
-
-  const batteryPercent=Math.round((data.battery-3.0)/(4.2-3.0)*100);
-  batteryEl.textContent=`${batteryPercent}%`;
-
+  lastUpdateEl.textContent=new Date().toLocaleString('en-PH',{hour12:false});
+  distanceEl.textContent=data.distance? `${data.distance.toFixed(1)} cm`:'— cm';
+  if(data.battery){ let percent=Math.round((data.battery-3.0)/(4.2-3.0)*100); percent=Math.max(0,Math.min(100,percent)); batteryEl.textContent=`${percent}%`; batteryEl.style.color=percent<20?'var(--danger)':'var(--accent)'; }
   streetEl.textContent=await getStreet(lat,lng);
 
-  if(data.sos){
-    alertsEl.textContent="⚠️ SOS — Send Help!";
-    alertsEl.className="status status-alert";
-    new Audio("https://actions.google.com/sounds/v1/alarms/beep_short.ogg").play();
-    if(navigator.vibrate) navigator.vibrate(500);
-  }else{
-    alertsEl.textContent="✅ No Alerts";
-    alertsEl.className="status status-ok";
-  }
-});
-</script>
-</body>
-</html>
+  if(data.sos){ alertsEl.textContent="⚠️ SOS — Send Help!"; alertsEl.className
