--- a/index.html
+++ b/index.html
@@ -5,10 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <title>S.T.E.P — Guardian Monitoring</title>
 
-  <!-- Leaflet CSS -->
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css"/>
-
-  <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet"/>
 
   <style>
@@ -19,164 +16,32 @@
       --text: #eaeaea;
       --muted: #aaa;
       --danger: #ff4d4d;
+      --warning: #ffcc00;
       --success: #4CAF50;
     }
 
     * { box-sizing: border-box; margin: 0; padding: 0; font-family: 'Poppins', sans-serif; }
 
-    body {
-      background: var(--bg);
-      color: var(--text);
-      display: flex;
-      flex-direction: column;
-      height: 100vh;
-      overflow: hidden;
-    }
-
-    header {
-      background: linear-gradient(90deg, #000, #111, #222);
-      padding: 18px 30px;
-      border-bottom: 2px solid var(--accent);
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      color: var(--accent);
-      font-weight: 700;
-      letter-spacing: 0.5px;
-      box-shadow: 0 0 12px rgba(255, 212, 0, 0.3);
-    }
-
-    main {
-      display: grid;
-      grid-template-columns: 2fr 1fr;
-      height: 100%;
-      overflow: hidden;
-    }
-
-    #map {
-      width: 100%;
-      height: 100%;
-      z-index: 1;
-    }
-
-    .panel {
-      background: var(--card);
-      padding: 25px;
-      display: flex;
-      flex-direction: column;
-      gap: 18px;
-      border-left: 2px solid #222;
-      box-shadow: inset 0 0 12px rgba(255, 212, 0, 0.05);
-      overflow-y: auto;
-    }
-
-    .title {
-      font-size: 22px;
-      color: var(--accent);
-      font-weight: 700;
-      text-align: center;
-    }
-
-    .info-box {
-      background: #111;
-      border: 1px solid #222;
-      border-radius: 10px;
-      padding: 12px 15px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      font-size: 16px;
-    }
-
-    .info-box span.value {
-      color: var(--accent);
-      font-weight: 600;
-    }
-
-    .status-pill {
-      background: var(--success);
-      color: #000;
-      font-weight: 700;
-      padding: 10px 14px;
-      border-radius: 8px;
-      text-align: center;
-      font-size: 15px;
-    }
-
-    .alert {
-      background: var(--danger);
-      color: #000;
-      font-weight: 700;
-      padding: 10px;
-      border-radius: 8px;
-      text-align: center;
-      font-size: 15px;
-      animation: blink 1.2s infinite alternate;
-    }
-
-    @keyframes blink {
-      0% { opacity: 1; }
-      100% { opacity: 0.6; }
-    }
-
-    .btn-row {
-      display: flex;
-      gap: 10px;
-      justify-content: flex-end;
-      margin-top: auto;
-    }
-
-    button {
-      flex: 1;
-      border: none;
-      background: var(--accent);
-      color: #000;
-      font-weight: 700;
-      border-radius: 10px;
-      padding: 12px;
-      cursor: pointer;
-      font-size: 16px;
-      transition: all 0.2s ease;
-    }
-
-    button:hover {
-      background: #ffe44d;
-      transform: scale(1.03);
-    }
-
-    button:focus {
-      outline: 2px solid var(--accent);
-      outline-offset: 2px;
-    }
-
-    footer {
-      text-align: center;
-      padding: 8px;
-      font-size: 13px;
-      color: var(--muted);
-      border-top: 1px solid #222;
-    }
-
-    @media(max-width: 900px) {
-      main { grid-template-columns: 1fr; grid-template-rows: 1fr 0.9fr; }
-      .panel { border-left: none; border-top: 2px solid #222; }
-    }
-
-    .sr-only {
-      position: absolute;
-      width: 1px;
-      height: 1px;
-      padding: 0;
-      margin: -1px;
-      overflow: hidden;
-      clip: rect(0, 0, 0, 0);
-      white-space: nowrap;
-      border: 0;
-    }
-
-    .leaflet-marker-icon {
-      transition: transform 0.5s ease;
-    }
+    body { background: var(--bg); color: var(--text); display: flex; flex-direction: column; height: 100vh; overflow: hidden; }
+    header { background: linear-gradient(90deg, #000, #111, #222); padding: 18px 30px; border-bottom: 2px solid var(--accent); display: flex; align-items: center; justify-content: space-between; color: var(--accent); font-weight: 700; letter-spacing: 0.5px; box-shadow: 0 0 12px rgba(255, 212, 0, 0.3); }
+    main { display: grid; grid-template-columns: 2fr 1fr; height: 100%; overflow: hidden; }
+    #map { width: 100%; height: 100%; z-index: 1; }
+    .panel { background: var(--card); padding: 25px; display: flex; flex-direction: column; gap: 18px; border-left: 2px solid #222; box-shadow: inset 0 0 12px rgba(255, 212, 0, 0.05); overflow-y: auto; }
+    .title { font-size: 22px; color: var(--accent); font-weight: 700; text-align: center; }
+    .info-box { background: #111; border: 1px solid #222; border-radius: 10px; padding: 12px 15px; display: flex; justify-content: space-between; align-items: center; font-size: 16px; }
+    .info-box span.value { color: var(--accent); font-weight: 600; }
+    .status-pill { background: var(--success); color: #000; font-weight: 700; padding: 10px 14px; border-radius: 8px; text-align: center; font-size: 15px; }
+    .alert { background: var(--danger); color: #000; font-weight: 700; padding: 10px; border-radius: 8px; text-align: center; font-size: 15px; animation: blink 1.2s infinite alternate; }
+    .warning { background: var(--warning); color: #000; font-weight: 700; padding: 10px; border-radius: 8px; text-align: center; font-size: 15px; }
+    @keyframes blink { 0% { opacity: 1; } 100% { opacity: 0.6; } }
+    .btn-row { display: flex; gap: 10px; justify-content: flex-end; margin-top: auto; }
+    button { flex: 1; border: none; background: var(--accent); color: #000; font-weight: 700; border-radius: 10px; padding: 12px; cursor: pointer; font-size: 16px; transition: all 0.2s ease; }
+    button:hover { background: #ffe44d; transform: scale(1.03); }
+    button:focus { outline: 2px solid var(--accent); outline-offset: 2px; }
+    footer { text-align: center; padding: 8px; font-size: 13px; color: var(--muted); border-top: 1px solid #222; }
+    @media(max-width: 900px) { main { grid-template-columns: 1fr; grid-template-rows: 1fr 0.9fr; } .panel { border-left: none; border-top: 2px solid #222; } }
+    .sr-only { position: absolute; width: 1px; height: 1px; padding: 0; margin: -1px; overflow: hidden; clip: rect(0,0,0,0); white-space: nowrap; border:0; }
+    .leaflet-marker-icon { transition: transform 0.5s ease; }
   </style>
 </head>
 <body>
@@ -204,13 +69,11 @@
 
   <footer>© 2025 S.T.E.P Smart Blind Shoe | Designed for accessibility and real-time tracking</footer>
 
-  <!-- Scripts -->
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database-compat.js"></script>
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
 
   <script>
-  // --- Firebase Configuration ---
   const firebaseConfig = {
     apiKey: "AIzaSyCEPsPPxprCkb70JAre73vo0jo3YA6uZQ4",
     authDomain: "step-gps-tracker.firebaseapp.com",
@@ -224,26 +87,19 @@
   firebase.initializeApp(firebaseConfig);
   const db = firebase.database();
 
-  // --- Leaflet Map ---
   const defaultLat = 14.3, defaultLng = 121.4;
-  const map = L.map('map', { zoomControl: true, attributionControl: true }).setView([defaultLat, defaultLng], 16);
-
-  L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-    maxZoom: 19,
-    attribution: '© OpenStreetMap contributors'
-  }).addTo(map);
+  const map = L.map('map').setView([defaultLat, defaultLng], 16);
+  L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',{ maxZoom:19, attribution:'© OpenStreetMap contributors'}).addTo(map);
 
   const blindIcon = L.divIcon({
-    className: 'custom-icon',
-    html: '<div style="width:40px;height:40px;border-radius:50%;background:#FFD400;border:3px solid #000;display:flex;align-items:center;justify-content:center;box-shadow:0 0 15px #FFD400;animation:pulse 2s infinite;"><span style="font-size:24px;" role="img" aria-label="Person with white cane">🧑‍🦯</span></div>',
-    iconSize: [40,40],
-    iconAnchor: [20,20]
+    className:'custom-icon',
+    html:'<div style="width:40px;height:40px;border-radius:50%;background:#FFD400;border:3px solid #000;display:flex;align-items:center;justify-content:center;box-shadow:0 0 15px #FFD400;animation:pulse 2s infinite;"><span style="font-size:24px;" role="img" aria-label="Person with white cane">🧑‍🦯</span></div>',
+    iconSize:[40,40], iconAnchor:[20,20]
   });
-
-  let marker = L.marker([defaultLat, defaultLng], {icon: blindIcon}).addTo(map).bindPopup('STEP Device Location');
+  let marker = L.marker([defaultLat, defaultLng], {icon: blindIcon}).addTo(map);
 
   let pathCoords = [];
-  let pathLine = L.polyline(pathCoords, {color:'#FFD400', weight:4, opacity:0.8, dashArray: '10, 10'}).addTo(map);
+  let pathLine = L.polyline(pathCoords, {color:'#FFD400', weight:4, opacity:0.8, dashArray:'10,10'}).addTo(map);
 
   const latlngEl = document.getElementById('latlng');
   const lastUpdateEl = document.getElementById('lastUpdate');
@@ -252,10 +108,7 @@
   const connectStatusEl = document.getElementById('connectStatus');
   const centerBtn = document.getElementById('centerBtn');
 
-  centerBtn.addEventListener('click', ()=> {
-    map.panTo(marker.getLatLng());
-    map.setZoom(18);
-  });
+  centerBtn.addEventListener('click', ()=>{ map.panTo(marker.getLatLng()); map.setZoom(18); });
 
   const shoeRef = db.ref('shoe');
   shoeRef.on('value', snap => {
@@ -271,9 +124,8 @@
 
     const lat = data.latitude || defaultLat;
     const lng = data.longitude || defaultLng;
-
     marker.setLatLng([lat,lng]);
-    map.panTo([lat,lng], {animate: true, duration: 1});
+    map.panTo([lat,lng], {animate:true, duration:1});
 
     pathCoords.push([lat,lng]);
     if(pathCoords.length > 200) pathCoords.shift();
@@ -281,18 +133,23 @@
 
     latlngEl.textContent = `${lat.toFixed(6)}, ${lng.toFixed(6)}`;
     lastUpdateEl.textContent = new Date().toLocaleString('en-PH',{hour12:false});
-    distanceEl.textContent = data.distance ? `${data.distance.toFixed(1)} cm` : '— cm';
+    const distance = data.distance || 999;
+    distanceEl.textContent = `${distance.toFixed(1)} cm`;
 
-    if(data.sos === true){
+    // --- Alert logic based on distance ---
+    if(distance < 30){
       alertsEl.textContent = "⚠️ SOS — Send Help!";
       alertsEl.className = "alert";
+    } else if(distance < 70){
+      alertsEl.textContent = "⚠️ Danger — Too Close!";
+      alertsEl.className = "warning";
     } else {
       alertsEl.textContent = "✅ No Alerts";
       alertsEl.className = "status-pill";
     }
   });
 
-  setTimeout(() => map.invalidateSize(), 100);
+  setTimeout(()=>map.invalidateSize(), 100);
   </script>
 </body>
 </html>
